--- a/pages/Animalpage/animalpage.css
+++ b/pages/Animalpage/animalpage.css
@@ -15,8 +15,21 @@
 
 .animal_header{
     margin-top: 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .info{
     margin: 10px;
+}
+
+.footer_button{
+    display: flex;
+    bottom: 0;
+}
+.custom_button_box_small{
+    width: 40%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
