--- a/pages/Animalpage/animalpage.css
+++ b/pages/Animalpage/animalpage.css
@@ -3,6 +3,7 @@
     width: 325px;
     height: 812px;
     padding: 10px;
+    position: relative;
 }
 
 .animal_img{
@@ -23,12 +24,23 @@
     margin: 10px;
 }
 
-.footer_button{
+.footer_button1{
+    left: 5px;
+    bottom: 10px;
+    position: absolute;
     display: flex;
-    bottom: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.footer_button2{
+    right: 5px;
+    bottom: 10px;
+    position: absolute;
 }
 .custom_button_box_small{
-    width: 40%;
     display: flex;
     align-items: center;
     flex-direction: column;
