--- a/comps/Menu/menu.css
+++ b/comps/Menu/menu.css
@@ -1,5 +1,5 @@
 .menu_buttons{
-    width: 250px;
+    width: 200px;
     height: 100vh;
     background-color: rgba(255, 255, 255, .85);
     border-right: 4px solid gray;
@@ -9,22 +9,24 @@
     align-items: center;
     flex-direction: column;
     position: relative;
-    left: -100%;
+    left: 0;
 }
 
 .menu_icon{
     padding: 5px;
     position: relative;
-    left: -250px;
+    left: 0px;
 }
 
 .entire_menu{
+    width: 325px;
     display: flex;
     background-color: lightblue;
+    left: 0;
 }
 
 .custom_button_box{
-    width:60%;
+    width: 50%;
     height:25px;
     display: block;
     align-items: center;
@@ -32,5 +34,5 @@
 }
 
 .custom_button_box_inner{
-    font-size: 35px;
+    font-size: 25px;
 }
