finished animal page

--- a/pages/Animalpage/animalpage.css
+++ b/pages/Animalpage/animalpage.css
@@ -45,3 +45,14 @@
     align-items: center;
     flex-direction: column;
 }
+
+#sound{
+    font-family: 'Rubik', sans-serif;
+    margin-right: 10px;
+}
+
+.animal_sound{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
