--- a/pages/Afvpage/afvpage.css
+++ b/pages/Afvpage/afvpage.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     background: -webkit-linear-gradient(#E1CA00,#ffff);
-    -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
