--- a/pages/Asepage/asepage.css
+++ b/pages/Asepage/asepage.css
@@ -13,8 +13,8 @@
     display: flex;
     justify-content: center;
     background: -webkit-linear-gradient(#DB4242,#ffff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .ase_subheader{
