--- a/pages/Aucpage/aucpage.css
+++ b/pages/Aucpage/aucpage.css
@@ -13,8 +13,8 @@
     display: flex;
     justify-content: center;
     background: -webkit-linear-gradient(#275CE2,#ffff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .auc_subheader{
