changed js files names to index.js, linked pages

--- a/pages/Afcpage/afcpage.css
+++ b/pages/Afcpage/afcpage.css
@@ -14,6 +14,7 @@
     justify-content: center;
     background: -webkit-linear-gradient(#E1CA00,#ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
