--- a/pages/Amcpage/amcpage.css
+++ b/pages/Amcpage/amcpage.css
@@ -14,6 +14,7 @@
     justify-content: center;
     background: -webkit-linear-gradient(#17CC4E, #ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
