--- a/pages/Ascpage/ascpage.css
+++ b/pages/Ascpage/ascpage.css
@@ -14,6 +14,7 @@
     justify-content: center;
     background: -webkit-linear-gradient(#DB4242,#ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
