--- a/pages/Aucpage/aucpage.css
+++ b/pages/Aucpage/aucpage.css
@@ -14,6 +14,7 @@
     justify-content: center;
     background: -webkit-linear-gradient(#275CE2,#ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
