--- a/pages/Loeafpage/loeafpage.css
+++ b/pages/Loeafpage/loeafpage.css
@@ -15,6 +15,7 @@
     font-size: 72px;
     background: -webkit-linear-gradient(#E1CA00,#ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
