--- a/pages/Loeaspage/loeaspage.css
+++ b/pages/Loeaspage/loeaspage.css
@@ -15,6 +15,7 @@
     font-size: 72px;
     background: -webkit-linear-gradient(#DB4242,#ffff);
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
