--- a/comps/big-buttons/big-buttons.css
+++ b/comps/big-buttons/big-buttons.css
@@ -1,8 +1,9 @@
 .custom_button_box {
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 25px;
     font-family: 'Londrina Solid', cursive;
-    padding: 25px;
     font-weight: bolder;
     font-size: 23pt;
     border: 5px solid #707070;
@@ -12,6 +13,8 @@
     margin: 5px;
     transition: 0.1s;
     text-align: center;
+    width: 200px;
+    height: 75px;
 }
 
 .custom_button_box:active{
