--- a/pages/Loeaspage/loeaspage.css
+++ b/pages/Loeaspage/loeaspage.css
@@ -23,17 +23,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
 }
 
 
 .buttons_small{
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 30%;
     position: absolute;
     bottom: 10px;
-    right: 65px;   
+    left: 10px;   
 }
 
 .entire_loeas .buttons_big > div {
