--- a/pages/Loeaspage/loeaspage.css
+++ b/pages/Loeaspage/loeaspage.css
@@ -1,7 +1,7 @@
 .entire_loeas{
     background-color: #6de2de;
-    width: 325px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 75%;
 }
 
 
