--- a/pages/Homepage/homepage.css
+++ b/pages/Homepage/homepage.css
@@ -1,5 +1,7 @@
 .entire_home{
     background-color: #ef9b20;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
