--- a/pages/Loeampage/loeampage.css
+++ b/pages/Loeampage/loeampage.css
@@ -1,7 +1,7 @@
 .entire_loeam{
     background-color: #6de2de;
-    width: 325px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
