--- a/pages/QuizPage/quiz-page.css
+++ b/pages/QuizPage/quiz-page.css
@@ -1,11 +1,12 @@
 html {
     display: inline-flex;
     justify-content: center;
+    
 }
 
 #quizpage {
-    width: 375px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     background-color: #6EE2DF;
     padding: 5px;
 }
