--- a/pages/QuizResultsPage/quiz-results-page.css
+++ b/pages/QuizResultsPage/quiz-results-page.css
@@ -4,8 +4,8 @@ html {
 }
 
 #quizpage {
-    width: 375px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     background-color: #6EE2DF;
 }
 
