--- a/pages/Tutorialpage/tutorialpage.css
+++ b/pages/Tutorialpage/tutorialpage.css
@@ -1,7 +1,7 @@
 .entire_tutorial{
     background-color: #ef9b20;
-    width: 325px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
