--- a/pages/Worldmappage/worldmap.css
+++ b/pages/Worldmappage/worldmap.css
@@ -6,8 +6,8 @@ html {
 
 .entire_map{
     background-color: #6EE2DF;
-    width: 325px;
-    height: 812px;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
