--- a/comps/big-buttons/big-buttons.css
+++ b/comps/big-buttons/big-buttons.css
@@ -10,7 +10,7 @@
     color: #707070;
     cursor: pointer;
     box-shadow: 3px 3px 6px black;
-    margin: 5px;
+    margin: 10%;
     transition: 0.1s;
     text-align: center;
     width: 75vw;
