--- a/pages/QuizPage/quiz-page.css
+++ b/pages/QuizPage/quiz-page.css
@@ -1,9 +1,3 @@
-html {
-    display: inline-flex;
-    justify-content: center;
-    
-}
-
 #quizpage {
     width: 100vw;
     height: 100vh;
@@ -19,9 +13,43 @@ html {
     margin: 30px 10px;
 }
 
-.button-container {
-    padding: 0px 5px;
+.button1 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px
+}
+
+.button2 {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.ToF-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 70px;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
+.False {
+    border-radius: 100px;
+    height: 15vh;
+    width: 15vh;
+    position: absolute;
+    bottom: 15%;
+    left: 10%;
+    background-color: white;
+    border: 5px solid grey;
+}
+
+.True {
+    border-radius: 100px;
+    height: 15vh;
+    width: 15vh;
+    position: absolute;
+    bottom: 15%;
+    right: 5%;
+    background-color: white;
+    border: 5px solid grey;
 }
