--- a/pages/Worldmappage/worldmap.css
+++ b/pages/Worldmappage/worldmap.css
@@ -2,6 +2,10 @@ html {
     margin: 0;
 }
 
+.header {
+    padding: 10px;
+    padding-top: 30px;
+}
 
 .map_entire{
     background-color: #6EE2DF;
@@ -10,9 +14,9 @@ html {
 }
 
 .button{
-    bottom: 10px;
-    left: 10px;
     position: absolute;
+    left: 10px;
+    bottom: 10px;
 }
 
 .custom_button_box_small{
