--- a/pages/PolarBearQuizResultsPage/quiz-results-page.css
+++ b/pages/PolarBearQuizResultsPage/quiz-results-page.css
@@ -27,3 +27,19 @@ html {
 .quiz-results-amount {
     padding: 10px;
 }
+
+.button1 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px
+}
+
+.button2 {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.LinkButton {
+    text-decoration: none;
+}
