--- a/pages/app.css
+++ b/pages/app.css
@@ -1,3 +1,9 @@
 div {
     text-align: center;
 }
+
+.button {
+    border-radius: 5px;
+    background-color: white;
+    border: 2px solid grey;
+}
