Added animal pictures, not yet implemented

--- a/pages/PolarBearPage/animalpage.css
+++ b/pages/PolarBearPage/animalpage.css
@@ -7,7 +7,7 @@
     margin-top: -8px;
 }
 
-.animal_img{
+.animal_img_box{
     display: flex;
     justify-content: center;
     align-items: center;
