--- a/comps/Menu/menu.css
+++ b/comps/Menu/menu.css
@@ -1,5 +1,5 @@
 .menu_buttons{
-    width: 200px;
+    width: 65%;
     height: 100vh;
     background-color: rgba(255, 255, 255, .85);
     border-right: 4px solid gray;
@@ -8,27 +8,24 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    left: -204px;
-    transition: left 1s;
+    position: absolute;
+    left: -100%;
+    transition: left 0.5s;
 }
 
 .menu_icon{
     padding: 5px;
-    position: relative;
-    left: -204px;
-    transition: left 1s;
+    position: absolute;
+    left: 0;
+    transition: left 0.5s;
 }
 
 .entire_menu{
-    width: 325px;
     display: flex;
-    background-color: lightblue;
 }
 
 .custom_button_box{
-    width: 50%;
-    height:25px;
+    width: 25vw;
     display: block;
     align-items: center;
     justify-content: center;
@@ -36,4 +33,8 @@
 
 .custom_button_box_inner{
     font-size: 25px;
+}
+
+.but{
+    width: 100%;
 }
