--- a/pages/Tutorialpage/tutorialpage.css
+++ b/pages/Tutorialpage/tutorialpage.css
@@ -8,7 +8,7 @@
     margin-top: -8px;
 }
 
-.tutorail_header{
+.tutorial_header{
     margin-top: 50px;
     display: flex;
     justify-content: center;
